# for display continuity sake please use 2 spaces instead of tabs

2012-01-15 mmichaud <michael.michaud@free.fr>
  * Fixed a severe bug in EditAttributeByFormulaPlugIn + I18N improvement
  
2012-01-15 mmichaud <michael.michaud@free.fr>
  * Avoid NPE in the case a WMS Layer has no Title
  
2012-01-09 mmichaud <michael.michaud@free.fr>
  * Try to make feature selection order more predictable

2012-12-31 
  PLUS bump JumpPrinter to 1.83 
  - problems with errors in the range field syntax are hopefully now fixed (detected before they cause problems)
  - updated the language files as advised and added a new Finnish language file to the jar
  - fixed the "Images" tabbed pane label, it is now available in the language properties
  - The name  Italian language file is now spelled correctly.
  - replaced the iText-2.0.7.jar on the web site (it was missing)
  I am attaching the latest version (1.83) and I have also placed it on the cadplan.com.au web site

2012-12-21 mmichaud <michael.michaud@free.fr>
  * Small improvements in language files and in OffsetCurvePlugIn UI after 
    Jukka's feedback and before the end of the world.

2012-12-18   Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Move Show ScaleBarPlugin, ShowScalePlugIn and NorthArrowPlugin to "View>Decoration" submenu.
  * Add icons to ScaleBarPlugin, ShowScalePlugIn and NorthArrowPlugin and ToolTip plugIns

2012-12-18  mmichaud <michael.michaud@free.fr>
  * Move Vertex Cursor Tool : shift double click will now delete a vertex
    after a suggestion from Jukka and Peppe.

2012-12-17  ede
  * adding support for GeoTIFF with transformation matrix georeferencing
    courtesy of Nicolas Ribot

2012-12-17   Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Move Delete Layer plugin to its original position on Layer context menu.

2012-12-13  mmichaud <michael.michaud@free.fr>
  * Move Vertex Cursor Tool : double click will now insert a vertex (Feature